Added custom JS and CSS to the router

--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,9 @@ live_debugger-*.tar
 .DS_Store
 
 .elixir_ls/
+
+node_modules/
+
+# FYI in Phoenix LiveDashboard they have these compiled files on repo
+# https://github.com/phoenixframework/phoenix_live_dashboard/tree/main/dist
+dist/
