Added dev environment (#2)
* Added dev script

* Added readme

* Gitignore updated

* Added internal router

* Changed names

* Added custom JS and CSS to the router

* Added dev.ex to formatter

* Added setup to dev.exs

* Git ignore format

* Updated README

--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,11 @@ live_debugger-*.tar
 /tmp/
 
 .DS_Store
+
+.elixir_ls/
+
+node_modules/
+
+# FYI in Phoenix LiveDashboard they have these compiled files on repo
+# https://github.com/phoenixframework/phoenix_live_dashboard/tree/main/dist
+dist/
