--- a/assets/package.json
+++ b/assets/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "alpinejs": "^3.14.7",
     "phoenix": "^1.7.17",
     "phoenix_html": "^3.3.4",
     "phoenix_live_view": "^1.0.0"
