--- a/assets/package.json
+++ b/assets/package.json
@@ -1,9 +1,12 @@
 {
-  "dependencies": {
-    "@alpinejs/collapse": "^3.14.7",
-    "alpinejs": "^3.14.7",
-    "phoenix": "^1.7.17",
-    "phoenix_html": "^3.3.4",
-    "phoenix_live_view": "^1.0.0"
-  }
+    "dependencies": {
+        "@alpinejs/collapse": "^3.14.7",
+        "alpinejs": "^3.14.7",
+        "phoenix": "^1.7.17",
+        "phoenix_html": "^3.3.4",
+        "phoenix_live_view": "^1.0.0"
+    },
+    "devDependencies": {
+        "prettier": "3.4.2"
+    }
 }
