--- a/.github/workflows/elixir-ci.yaml
+++ b/.github/workflows/elixir-ci.yaml
@@ -32,7 +32,10 @@ jobs:
           path: deps
           key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
           restore-keys: ${{ runner.os }}-mix-
+
       - name: Setup project
         run: mix setup
+      - name: Check formatting
+        run: mix format --check-formatted
       - name: Run tests
         run: mix test
