--- a/.github/workflows/elixir-ci.yaml
+++ b/.github/workflows/elixir-ci.yaml
@@ -40,6 +40,6 @@ jobs:
       - name: Check credo
         run: mix credo
       - name: Check prettier
-        run: cmd --cd assets prettier . --check
+        run: (cd assets && prettier . --check)
       - name: Run tests
         run: mix test
