--- a/.github/workflows/elixir-ci.yaml
+++ b/.github/workflows/elixir-ci.yaml
@@ -17,12 +17,12 @@ permissions:
 jobs:
   build:
     name: Build and test
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
 
     steps:
       - uses: actions/checkout@v4
       - name: Set up Elixir
-        uses: erlef/setup-beam@61e01a43a562a89bfc54c7f9a378ff67b03e4a21 # v1.16.0
+        uses: erlef/setup-beam@v1.18.0
         with:
           elixir-version: "1.17.3" # [Required] Define the Elixir version
           otp-version: "27.1.2" # [Required] Define the Erlang/OTP version
