--- a/.github/workflows/elixir-ci.yaml
+++ b/.github/workflows/elixir-ci.yaml
@@ -35,6 +35,8 @@ jobs:
 
       - name: Setup project
         run: mix setup
+      - name: Compile project
+        run: mix compile --warnings-as-errors
       - name: Check formatting
         run: mix format --check-formatted
       - name: Check credo
