--- a/.github/workflows/assets.yaml
+++ b/.github/workflows/assets.yaml
@@ -29,6 +29,9 @@ jobs:
           key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
           restore-keys: ${{ runner.os }}-mix-
 
+      - name: Install Dependencies
+        run: mix deps.get
+
       - name: Cache npm dependencies
         uses: actions/cache@v2
         with:
