--- a/.github/workflows/elixir-ci.yaml
+++ b/.github/workflows/elixir-ci.yaml
@@ -38,7 +38,7 @@ jobs:
           restore-keys: ${{ runner.os }}-mix-
 
       - name: Install Dependencies
-        run: mix deps.get --only test
+        run: mix deps.get
 
       - name: Check formatting
         run: mix format --check-formatted
