--- a/devtools/manifest.json
+++ b/devtools/manifest.json
@@ -12,10 +12,13 @@
     "128": "images/icon-128.png"
   },
   "devtools_page": "./devtools.html",
+  "background": {
+    "service_worker": "background.js"
+  },
   "content_scripts": [
     {
       "matches": ["<all_urls>"],
-      "js": ["hook.js"],
+      "js": ["content-script.js"],
       "run_at": "document_start"
     }
   ]
