--- a/.github/workflows/assets.yaml
+++ b/.github/workflows/assets.yaml
@@ -53,4 +53,4 @@ jobs:
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
           commit_message: Update assets
-          file_pattern: priv
+          file_pattern: dist
