Rename esbuild, tailwind tasks and parematrize build task

--- a/.github/workflows/assets.yaml
+++ b/.github/workflows/assets.yaml
@@ -46,7 +46,7 @@ jobs:
         run: mix "assets.setup"
 
       - name: Build assets
-        run: mix "assets.build"
+        run: mix "assets.build:deploy"
 
       - name: Push updated assets
         id: push_assets
