--- a/devtools/manifest.json
+++ b/devtools/manifest.json
@@ -11,12 +11,5 @@
     "48": "images/icon-48.png",
     "128": "images/icon-128.png"
   },
-  "devtools_page": "./devtools.html",
-  "content_scripts": [
-    {
-      "matches": ["<all_urls>"],
-      "js": ["hook.js"],
-      "run_at": "document_start"
-    }
-  ]
+  "devtools_page": "./devtools.html"
 }
