--- a/devtools/manifest.json
+++ b/devtools/manifest.json
@@ -4,7 +4,7 @@
   "version": "0.1.0",
   "description": "Extension which allows running LiveDebugger inside DevTools",
   "author": "SWM",
-  "permissions": ["storage"],
+  "permissions": ["webNavigation"],
   "icons": {
     "16": "images/icon-16.png",
     "32": "images/icon-32.png",
