Add on merge_group workflow

--- a/.github/workflows/elixir-ci.yaml
+++ b/.github/workflows/elixir-ci.yaml
@@ -9,7 +9,8 @@ on:
   push:
     branches: ["main"]
   pull_request:
-    branches: ["main"]
+    branches: ["main", "test-merge-queue-main"]
+  merge_group:
 
 permissions:
   contents: read
