--- a/.github/workflows/assets.yaml
+++ b/.github/workflows/assets.yaml
@@ -4,7 +4,9 @@ on:
   push:
     branches:
       - main
-  merge_group:
+  pull_request:
+    types: [auto_merge_enabled, enqueued]
+    branches: [test-merge-queue-main]
 
 jobs:
   build:
