--- a/.github/workflows/assets.yaml
+++ b/.github/workflows/assets.yaml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
   pull_request:
-    types: [auto_merge_enabled, enqueued]
+    types: [dequeued]
     branches: [test-merge-queue-main]
 
 jobs:
