--- a/.github/workflows/assets.yaml
+++ b/.github/workflows/assets.yaml
@@ -1,7 +1,7 @@
 name: Assets
 
 on:
-  pull_request:
+  push:
     branches: [test-merge-queue-main]
 
 jobs:
@@ -11,6 +11,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Elixir
         uses: erlef/setup-beam@v1.18.0
