--- a/.github/workflows/assets.yaml
+++ b/.github/workflows/assets.yaml
@@ -12,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
 
       - name: Set up Elixir
         uses: erlef/setup-beam@v1.18.0
