--- a/.github/workflows/assets.yaml
+++ b/.github/workflows/assets.yaml
@@ -11,8 +11,10 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
+      - uses: webfactory/ssh-agent@v0.9.0
         with:
-          ssh-key: ${{ secrets.DEPLOY_KEY }}
+          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
 
       - name: Set up Elixir
         uses: erlef/setup-beam@v1.18.0
