--- a/assets/package.json
+++ b/assets/package.json
@@ -7,6 +7,7 @@
     "phoenix_live_view": "^1.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/container-queries": "^0.1.1",
     "prettier": "^3.5.1"
   }
 }
