--- a/.github/workflows/assets.yaml
+++ b/.github/workflows/assets.yaml
@@ -11,10 +11,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
-
-      - uses: webfactory/ssh-agent@v0.9.0
         with:
-          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
+
+      # - uses: webfactory/ssh-agent@v0.9.0
+      #   with:
+      #     ssh-private-key: ${{ secrets.DEPLOY_KEY }}
 
       - name: Set up Elixir
         uses: erlef/setup-beam@v1.18.0
