--- a/.github/workflows/assets.yaml
+++ b/.github/workflows/assets.yaml
@@ -12,6 +12,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          ssh-key: ${{ secrets.DEPLOY_KEY }}
 
       - name: Set up Elixir
         uses: erlef/setup-beam@v1.18.0
