--- a/.github/workflows/elixir-ci.yaml
+++ b/.github/workflows/elixir-ci.yaml
@@ -7,9 +7,12 @@ name: Elixir CI
 
 on:
   push:
-    branches: ["main"]
+    branches:
+      - main
+      - "v*.*"
   pull_request:
-    branches: ["main"]
+    branches:
+      - main
 
 permissions:
   contents: read
