--- a/.github/workflows/backward-compatibility-ci.yaml
+++ b/.github/workflows/backward-compatibility-ci.yaml
@@ -3,7 +3,7 @@
 # separate terms of service, privacy policy, and support
 # documentation.
 
-name: Elixir CI
+name: Backward Compatibility CI
 
 on:
   push:
@@ -28,8 +28,11 @@ jobs:
       - name: Set up Elixir
         uses: erlef/setup-beam@v1.18.0
         with:
-          elixir-version: "1.18.3" # [Required] Define the Elixir version
-          otp-version: "27.3.4" # [Required] Define the Erlang/OTP version
+          elixir-version: "1.16.0" # [Required] Define the Elixir version
+          otp-version: "26.0.2" # [Required] Define the Erlang/OTP version
+
+      - name: Copy mix.lock
+        run: cp ./.github/workflows/assets/mix.lock mix.lock
 
       - name: Cache Mix
         uses: actions/cache@v4
@@ -37,17 +40,11 @@ jobs:
           path: |
             deps
             _build
-          key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
-          restore-keys: ${{ runner.os }}-mix-
+          key: backward-compatibility-${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
+          restore-keys: backward-compatibility-${{ runner.os }}-mix-
 
       - name: Install Dependencies
         run: mix deps.get
-
-      - name: Check formatting
-        run: mix format --check-formatted
-
-      - name: Check credo
-        run: mix credo
 
       - name: Compile project
         run: mix compile --warnings-as-errors
@@ -57,7 +54,3 @@ jobs:
 
       - name: Run e2e tests
         run: mix e2e
-
-      - name: Check prettier
-        working-directory: ./assets
-        run: npx prettier . --check
