--- a/assets/package.json
+++ b/assets/package.json
@@ -1,13 +1,14 @@
 {
   "dependencies": {
     "@alpinejs/collapse": "^3.14.7",
+    "@tailwindcss/forms": "^0.5.10",
+    "@tailwindcss/container-queries": "^0.1.1",
     "alpinejs": "^3.14.7",
     "phoenix": "^1.7.17",
     "phoenix_html": "^3.3.4",
     "phoenix_live_view": "^1.0.0"
   },
   "devDependencies": {
-    "@tailwindcss/container-queries": "^0.1.1",
     "prettier": "^3.5.1"
   }
 }
