--- a/devtools/chrome/manifest.json
+++ b/devtools/chrome/manifest.json
@@ -1,13 +1,10 @@
 {
   "manifest_version": 3,
   "name": "LiveDebugger DevTools",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "Extension which allows running LiveDebugger inside DevTools",
   "author": "SWM",
-  "permissions": [
-    "webNavigation",
-    "clipboardWrite"
-  ],
+  "permissions": ["webNavigation", "clipboardWrite"],
   "icons": {
     "16": "images/icon-16.png",
     "32": "images/icon-32.png",
