--- a/devtools/chrome/manifest.json
+++ b/devtools/chrome/manifest.json
@@ -4,7 +4,7 @@
   "version": "0.1.2",
   "description": "Extension which allows running LiveDebugger inside DevTools",
   "author": "SWM",
-  "permissions": ["webNavigation", "clipboardWrite"],
+  "permissions": ["clipboardWrite"],
   "icons": {
     "16": "images/icon-16.png",
     "32": "images/icon-32.png",
