--- a/.github/workflows/landing-build-check.yml
+++ b/.github/workflows/landing-build-check.yml
@@ -23,6 +23,7 @@ jobs:
               uses: actions/setup-node@v4
               with:
                   cache: "npm"
+                  cache-dependency-path: landing/package-lock.json
             - name: Install monorepo node dependencies
               working-directory: landing
               run: npm install
