--- a/.github/workflows/landing-publish.yml
+++ b/.github/workflows/landing-publish.yml
@@ -21,6 +21,7 @@ jobs:
               uses: actions/setup-node@v4
               with:
                   cache: "npm"
+                  cache-dependency-path: landing/package-lock.json
             - name: Install monorepo node dependencies
               working-directory: landing
               run: npm install
