--- a/.github/workflows/landing-publish.yml
+++ b/.github/workflows/landing-publish.yml
@@ -22,12 +22,13 @@ jobs:
               with:
                   cache: "npm"
                   cache-dependency-path: landing/package-lock.json
-            - name: Install monorepo node dependencies
+            - name: Install node dependencies
               working-directory: landing
               run: npm install
-            - name: Build Reanimated docs
+            - name: Build landing page
               working-directory: landing
-              run: npm build
+              run: npm run build
+
             - name: Publish generated content to GitHub Pages
               uses: JamesIves/github-pages-deploy-action@releases/v3
               with:
