--- a/assets/app/package.json
+++ b/assets/app/package.json
@@ -2,6 +2,8 @@
   "dependencies": {
     "@alpinejs/collapse": "^3.14.7",
     "@codemirror/theme-one-dark": "^6.1.3",
+    "@fsegurai/codemirror-theme-github-dark": "^6.2.3",
+    "@fsegurai/codemirror-theme-github-light": "^6.2.3",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.10",
     "alpinejs": "^3.14.7",
