--- a/assets/app/package.json
+++ b/assets/app/package.json
@@ -1,10 +1,15 @@
 {
   "dependencies": {
     "@alpinejs/collapse": "^3.14.7",
+    "@codemirror/theme-one-dark": "^6.1.3",
+    "@fsegurai/codemirror-theme-github-dark": "^6.2.3",
+    "@fsegurai/codemirror-theme-github-light": "^6.2.3",
     "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.10",
     "alpinejs": "^3.14.7",
     "chart.js": "^4.5.1",
+    "codemirror": "^6.0.2",
+    "codemirror-lang-elixir": "^4.0.0",
     "phoenix": "^1.7.17",
     "phoenix_html": "^3.3.4",
     "phoenix_live_view": "^1.0.0"
