--- a/.github/workflows/playwright.yaml
+++ b/.github/workflows/playwright.yaml
@@ -55,6 +55,6 @@ jobs:
       - uses: actions/upload-artifact@v4
         if: ${{ !cancelled() }}
         with:
-          name: e2e/playwright-report
+          name: playwright-report
           path: e2e/playwright-report/
           retention-days: 1
