--- a/.github/workflows/playwright.yaml
+++ b/.github/workflows/playwright.yaml
@@ -42,7 +42,7 @@ jobs:
       - name: Get installed Playwright version
         id: playwright-version
         working-directory: ./e2e
-        run: echo "PLAYWRIGHT_VERSION=$(node -e "console.log(require('./package-lock.json').dependencies['@playwright/test'].version)")" >> $GITHUB_ENV
+        run: echo "PLAYWRIGHT_VERSION=$(node -e "console.log(require('./package-lock.json').packages['node_modules/@playwright/test'].version)")" >> $GITHUB_ENV
 
       - name: Cache playwright binaries
         uses: actions/cache@v3
