--- a/assets/app/package.json
+++ b/assets/app/package.json
@@ -12,7 +12,8 @@
     "codemirror-lang-elixir": "^4.0.0",
     "phoenix": "^1.7.17",
     "phoenix_html": "^3.3.4",
-    "phoenix_live_view": "^1.0.0"
+    "phoenix_live_view": "^1.0.0",
+    "semver": "^7.7.4"
   },
   "devDependencies": {
     "prettier": "^3.5.1"
